syntax = "proto3";

option java_package = "com.github.crob1140.codewiz.grpc";
option java_multiple_files = true;

service JavaCompiler {
	rpc Compile(CommitDetails) returns (CompilationResult);
}

message CommitDetails {
	string domain = 1;
	string username = 2;
	string repository = 3;
	string branch = 4;
	string commit_hash = 5;
}

message CompilationResult {
	message Success {}
	message Error {
		string file_name = 1;
		int64 line_number = 2;
		int64 column_number = 3;
		string message = 4;
	}
	message ErrorCollection {
		repeated Error errors = 1;
	}
	
	oneof result {
		Success success = 1;
		ErrorCollection errors = 2;
	}
}